# dataset_capture

./: .gitignore  CMakeLists.txt  package.xml
include/dataset_capture/: pose_grabber.h
src/: dataset_capture.cpp  pose_grabber.cpp
