<?xml version="1.0"?>
<package format="3">
  <name>dataset_capture</name>
  <version>1.0.0</version>
  <description>Used for creation of hand-eye calibration datasets</description>
  <maintainer email="markubjo@stud.ntnu.no">Markus Bjønnes</maintainer>
  
  <license>Apache License 2.0</license>
  <author email="markubjo@stud.ntnu.no">Markus Bjønnes</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>abb_librws</depend>
  <depend>Zivid</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>